package boatFactory;

/**
 * Created by simon on 05/04/18.
 */
public abstract class AbstractBateauFactory {
    public static AbstractBateauFactory getFactoryByEpoque(int epoque) {

        switch (epoque){
        }
        //return new;
        return null;
    }

}
